src/objects/DataField__c.object
<CustomObject>
    <description>Defines a field or column of data related to a Data Object definition.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Any comments or special conditions of this field.</description>
        <inlineHelpText>Any comments or special conditions of this field.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The external unique name used to identify this field.</description>
        <externalId>true</externalId>
        <label>External Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>The expected formatting of the field value.</description>
        <inlineHelpText>The expected formatting of the field value.</inlineHelpText>
        <label>Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label of the field if it sis not the same as the datasource or API name.</description>
        <inlineHelpText>The label of the field if it sis not the same as the datasource or API name.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <description>Where this field is in the WGU deployment process.</description>
        <inlineHelpText>Where this field is in the WGU deployment process.</inlineHelpText>
        <label>Lifecycle</label>
        <picklist>
            <picklistValues>
                <fullName>Drawing Board</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prototyped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObjectDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The object that will be stored in this field, usually for JSON or XML data.</description>
        <inlineHelpText>The object that will be stored in this field, usually for JSON or XML data.</inlineHelpText>
        <label>Object Definition</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Parent Fields</relationshipLabel>
        <relationshipName>ParentFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <description>The object that this field is a child.</description>
        <inlineHelpText>The object that this field is a child.</inlineHelpText>
        <label>Parent Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PrimaryKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if part of primary key for the Data Object.</description>
        <inlineHelpText>Designates if part of primary key for the Data Object.</inlineHelpText>
        <label>Primary Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that this field is related to either by a FK or other restriction such as a Lookup.</description>
        <inlineHelpText>The field that this field is related to either by a FK or other restriction such as a Lookup.</inlineHelpText>
        <label>Related Field</label>
        <referenceTo>DataField__c</referenceTo>
        <relationshipLabel>Related Fields</relationshipLabel>
        <relationshipName>RelatedFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is required in order to save a record.</description>
        <inlineHelpText>The field is required in order to save a record.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>The size of the data that is allowed in this field. For text would be 100 CHAR or number 4, 2.</description>
        <inlineHelpText>The size of the data that is allowed in this field. For text would be 100 CHAR or number 4, 2.</inlineHelpText>
        <label>Size</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Anydata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bfile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Char</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EncryptedString</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Float</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master/Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiPicklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nclob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nvarchar2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rich Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rowid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidationRule__c</fullName>
        <description>The requirements needed for the value being stored to be considered valid.</description>
        <inlineHelpText>The requirements needed for the value being stored to be considered valid.</inlineHelpText>
        <label>Validation Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Fields</pluralLabel>
    <recordTypes>
        <fullName>Array</fullName>
        <active>true</active>
        <label>Array</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular</fullName>
        <active>true</active>
        <label>Regular</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related</fullName>
        <active>true</active>
        <label>Related</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>